refactor: Modernize to Java 25 idioms - use String.formatted()
- Replace String.format() with String.formatted() in RenderMachineImpl (6 locations)
- Update doctester-core/pom.xml version to 2.0.0
- Improves Java 25 consistency and modernizes codebase

https://claude.ai/code/session_01BSRPv5Lg77bbXFMJBnHz71